# The-Sandbox

./: .gitignore
Apache-beam/: pom.xml
DesignPattern/: pom.xml
GitHubAction/: README.MD
GitHubAction/action/: README.MD
GitHubAction/conditional/: git-hub-action-demo.yaml
GitHubAction/container/: git-hub-action-demo.yaml
GitHubAction/enviroment/: git-hub-action-demo.yaml
GitHubAction/event-trigger/: git-hub-action-branches.yaml  git-hub-action-path.yaml  git-hub-action-workflow.yaml
GitHubAction/job-dependencies/: git-hub-action.yaml
GitHubAction/variables/: git-hub-action-env.yaml  git-hub-action-pass-variable.yaml
Golang/basic/: argsExample.go  byteBufferExample.go  fileBasicStructure.go  iotaConst.go  newFucntionExample.go  printExample.go  stringExample.go  tupleAssignmentExample.go  typeDeclaration.go
Guice/example/: pom.xml
Guice/webapp/: pom.xml
HTML/: pom.xml
JSON/: pom.xml
JWT/: pom.xml
Jasper/: pom.xml
JavaBasic/: pom.xml
JavaModule/: README.md  pom.xml
Lombok/: README.md  pom.xml
Odata/: README.md  pom.xml
XML/: pom.xml
a2a/base-example/: README.md  agent_executor.py  client.py  main.py  pyproject.toml
adk/a2a-example/: README.md  main.py  (+1 more)
algorithms/: pom.xml
exercise/: pom.xml
jenkins/: README.MD
kotlin/: pom.xml
mcp/base-client/: client.py  pyproject.toml
mcp/base-client/server/: __init__.py
modelmapper/: README.md  pom.xml
pdfbox/: pom.xml
rest-assured/: pom.xml
restAPI/: pom.xml
rss/: pom.xml
rx/: pom.xml
smartsheet/: pom.xml
spel/: pom.xml
utilities/: pom.xml
velocity/: pom.xml
(+908 files in other folders)
