[project]
name = "mcp-server"
version = "0.1.0"
description = "mcp server example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]

[project.scripts]
server = "server:run_server"